[package]
name = "bourg_ecs_with_common_and_dq"
version = "0.1.0"
authors = ["chaddw <caw14f@my.fsu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21.1"
crossterm = {version = "0.17.7", features = ["event-stream"]}
specs = "0.16.1"
coord_transforms = "1.3.0"
lazy_static = "1.4.0"
futures = "0.3.5"
futures-timer = "3.0.2"
async-std = "1.6.4"
time = "0.2.18"
device_query = "0.2.5"