[package]
name = "net_fdm"
version = "0.1.0"
authors = ["ubun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
socket = "0.0.7"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }