[package]
name = "palmer_as_ecs"
version = "0.1.0"
authors = ["chaddw <caw14f@my.fsu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.7"
specs = "0.16.1"
coord_transforms = "1.3.0"
lazy_static = "1.4.0"