[package]
name = "palmer_flightgear_sim"
version = "0.1.0"
authors = ["chaddw <caw14f@my.fsu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
device_query = "0.2.5"
coord_transforms = "1.3.0"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }